--- a/templates/FFMassiveV_form_factors.cpp.in
+++ b/templates/FFMassiveV_form_factors.cpp.in
@@ -352,7 +352,6 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
 
    std::valarray<std::complex<double>> res {0.0, 0.0};
    // loop over all possible particle "generations" attached to both vertices
-
    for (const auto& indexIn: indexBoundsIn) {
       for (const auto& indexOut: indexBoundsOut) {
 
@@ -368,11 +367,13 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
          if (scalarFieldIndicesIn != scalarFieldIndicesOut)
             continue;
 
-         // get FBarFV vertex
+         // get FBarFVBar vertex
          const auto fermionFieldIndicesIn = VertexFBarFjS::template fieldIndices<0>(indexIn);
          const auto fermionFieldIndicesOut = VertexFiBarFSBar::template fieldIndices<1>(indexOut);
-         const auto indexFBarFVBar = flexiblesusy::cxx_diagrams::impl::concatenate(fermionFieldIndicesOut, 
-            flexiblesusy::cxx_diagrams::impl::concatenate( fermionFieldIndicesIn, spectator_indices));
+         const auto indexFBarFVBar = flexiblesusy::cxx_diagrams::impl::concatenate(
+            flexiblesusy::cxx_diagrams::impl::concatenate(fermionFieldIndicesOut, fermionFieldIndicesIn),
+            spectator_indices
+         );
          const auto FBarFVBar = VertexFBarFVBar::evaluate(indexFBarFVBar, context);
          const auto FBarFVBarL = FBarFVBar.left();
          const auto FBarFVBarR = FBarFVBar.right();
@@ -440,13 +441,14 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
    const auto mi = context.mass<Fi>(indices_out);
    const auto mi2 = mi*mi;
 
-   std::valarray<std::complex<double>> res {0.0, 0.0};
-   // loop over all possible particle "generations" attached to both vertices
-
    constexpr auto indexBoundsOut = VertexFiBarFSBar::index_bounds;
    constexpr auto indexBoundsIn = VertexFBarFjS::index_bounds;
+
+   std::valarray<std::complex<double>> res {0.0, 0.0};
+   // loop over all possible particle "generations" attached to both vertices
    for (const auto& indexIn: indexBoundsIn) {
       for (const auto& indexOut: indexBoundsOut) {
+
          // cycle if generations of external fermions  are different then requested   
          const auto jFieldIndices = VertexFBarFjS::template fieldIndices<1>(indexIn);
          const auto iFieldIndices = VertexFiBarFSBar::template fieldIndices<0>(indexOut);
@@ -463,8 +465,8 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
          const auto scalarFieldIndicesIn = VertexFBarFjS::template fieldIndices<2>(indexIn);
          const auto scalarFieldIndicesOut = VertexFiBarFSBar::template fieldIndices<2>(indexOut);
          const auto indexSBarSVBar = flexiblesusy::cxx_diagrams::impl::concatenate(
-            scalarFieldIndicesOut, 
-            flexiblesusy::cxx_diagrams::impl::concatenate(scalarFieldIndicesIn, spectator_indices)
+            flexiblesusy::cxx_diagrams::impl::concatenate(scalarFieldIndicesOut, scalarFieldIndicesIn), 
+            spectator_indices
          );
          const auto SBarSVBar = VertexSBarSVBar::evaluate(indexSBarSVBar, context).value();
 
