don't throw exception if 3L calculation fails
just print a warning and flag an imprecise mass calculation

--- a/templates/two_scale_high_scale_constraint.cpp.in
+++ b/templates/two_scale_high_scale_constraint.cpp.in
@@ -90,9 +90,9 @@ namespace flexiblesusy {
                      << ho.getSuitableHierarchy() << ", "               \
                      << lambda_3L <<")");                               \
       } catch (const std::exception& e) {                               \
-         VERBOSE_MSG(e.what());                                         \
+         model->get_problems().flag_bad_mass(@ModelName@_info::@HiggsBoson@); \
+         WARNING(e.what());                                             \
          VERBOSE_MSG(pars);                                             \
-         throw HimalayaError(e.what());                                 \
       }                                                                 \
                                                                         \
       return lambda_3L;                                                 \
