--- a/templates/f_to_f_conversion.cpp.in
+++ b/templates/f_to_f_conversion.cpp.in
@@ -24,6 +24,7 @@
  * This file was generated at @DateAndTime@ with FlexibleSUSY
  * @FlexibleSUSYVersion@ and SARAH @SARAHVersion@ .
  */
+
 #include <valarray>
 #include <complex>
 #include <iostream>
@@ -51,7 +52,7 @@ struct overlap_integrals {
    double Sn;
 };
 
-overlap_integrals get_overlap_integrals(Nucleus N, const softsusy::QedQcd& qedqcd) {
+overlap_integrals get_overlap_integrals(const Nucleus N, const softsusy::QedQcd& qedqcd) {
    overlap_integrals res; 
    // get muon pole mass from input slha file
    const auto muon_pole_mass {qedqcd.displayMass(softsusy::mMuon)};
@@ -70,6 +71,7 @@ overlap_integrals get_overlap_integrals(Nucleus N, const softsusy::QedQcd& qedqc
    } 
 }
 
+template <class V>
 std::valarray<std::complex<double>> create_massive_penguin_amp(
       int generationIndex1,  int generationIndex2, 
       const MRSSM2_mass_eigenstates& model, 
@@ -78,29 +80,27 @@ std::valarray<std::complex<double>> create_massive_penguin_amp(
    MRSSM2_mass_eigenstates model_ = model;
    EvaluationContext context{ model_ };
 
-   const auto VZ_exchange = calculate_Fe_Fe_VZ_form_factors (generationIndex1,  generationIndex2, model);
+   const auto V_exchange = calculate_Fe_Fe_VZ_form_factors (generationIndex1,  generationIndex2, model);
 
-   using FuBarFuVbarVertex = Vertex<typename Fu::lorentz_conjugate, Fu, typename VZ::lorentz_conjugate>;
-   using FdBarFdVbarVertex = Vertex<typename Fd::lorentz_conjugate, Fd, typename VZ::lorentz_conjugate>;
+   using FuBarFuVbarVertex = Vertex<typename Fu::lorentz_conjugate, Fu, typename V::lorentz_conjugate>;
+   using FdBarFdVbarVertex = Vertex<typename Fd::lorentz_conjugate, Fd, typename V::lorentz_conjugate>;
    
    std::array<int, 4> indices {0, 0, 0, 0};
    const auto FuBarFuVbarVertexValue = FuBarFuVbarVertex::evaluate(indices, context);
-
-   const auto indices2 = flexiblesusy::cxx_diagrams::impl::concatenate( std::array<int, 2> {0, 0}, std::array<int, 2> {0, 0});
-   const auto FdBarFdVbarVertexValue = FdBarFdVbarVertex::evaluate(indices2, context);
+   const auto FdBarFdVbarVertexValue = FdBarFdVbarVertex::evaluate(indices, context);
 
    const auto uVectorCurrent = 0.5*(FuBarFuVbarVertexValue.left() + FuBarFuVbarVertexValue.right());
    const auto dVectorCurrent = 0.5*(FdBarFdVbarVertexValue.left() + FdBarFdVbarVertexValue.right());
 
-   const auto mVsqr = pow(context.mass<VZ>({}), 2);
+   const auto mVsqr = pow(context.mass<V>({}), 2);
    const auto GF {qedqcd.displayFermiConstant()};
-   std::complex<double> guLV = -sqrt(2.0)/GF * 1./mVsqr * VZ_exchange[0] * uVectorCurrent;
-   std::complex<double> guRV = -sqrt(2.0)/GF * 1./mVsqr * VZ_exchange[1] * uVectorCurrent;
-   std::complex<double> gdLV = -sqrt(2.0)/GF * 1./mVsqr * VZ_exchange[0] * dVectorCurrent;
-   std::complex<double> gdRV = -sqrt(2.0)/GF * 1./mVsqr * VZ_exchange[1] * dVectorCurrent;
-   std::cout << "Z-triangle " << VZ_exchange[0] << ' ' << VZ_exchange[1] << '\n';
+   std::complex<double> guLV = -sqrt(2.0)/GF * 1./mVsqr * V_exchange[0] * uVectorCurrent;
+   std::complex<double> guRV = -sqrt(2.0)/GF * 1./mVsqr * V_exchange[1] * uVectorCurrent;
+   std::complex<double> gdLV = -sqrt(2.0)/GF * 1./mVsqr * V_exchange[0] * dVectorCurrent;
+   std::complex<double> gdRV = -sqrt(2.0)/GF * 1./mVsqr * V_exchange[1] * dVectorCurrent;
+   std::cout << "Z-triangle " << V_exchange[0] << ' ' << V_exchange[1] << '\n';
    std::cout << "GF " << GF << '\n';
-   std::cout << "mZ " << context.mass<VZ>({}) << '\n';
+   std::cout << "mZ " << context.mass<V>({}) << '\n';
    std::cout << "u vector current " << uVectorCurrent << '\n';
    std::cout << "d vector current " << dVectorCurrent << '\n';
    std::cout << "gu " << guLV << ' ' << guRV << '\n';
