--- a/templates/FFV_form_factors.cpp.in
+++ b/templates/FFV_form_factors.cpp.in
@@ -91,6 +91,14 @@ struct EDMVertexCorrectionFS {
          const typename field_indices<FermionOut>::type& indices_out,
                        EvaluationContext& context);
 };
+
+template<class Fj, class Fi, class V, class F, class S>
+struct FFVEmitterS {
+static std::valarray<std::complex<double>> value(
+   const typename field_indices<Fj>::type& indices_in, 
+   const typename field_indices<Fi>::type& indices_out, 
+   EvaluationContext& context);
+};
 } // anonymous namespace
 
 namespace flexiblesusy {
@@ -406,4 +414,101 @@ FermionIn, FermionOut, Spectator, Emitter, ExchangeField
    return res;
 }
 
+template<class Fj, class Fi, class V, class F, class S>
+std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
+   const typename field_indices<Fj>::type& indices_in, 
+   const typename field_indices<Fi>::type& indices_out, 
+   EvaluationContext& context) {
+
+   auto spectator_indices = default_indices_for_spectator<V>();
+   using VertexFjBarFjVBar = Vertex<typename Fj::lorentz_conjugate, Fj, typename V::lorentz_conjugate>;
+         const auto kuwa = flexiblesusy::cxx_diagrams::impl::concatenate(
+            flexiblesusy::cxx_diagrams::impl::concatenate(indices_in, indices_in), 
+            spectator_indices
+         );
+   const auto FjBarFjVBar = VertexFjBarFjVBar::evaluate(kuwa, context).left();
+   using VertexFBarFjS     = Vertex<typename F::lorentz_conjugate, Fj, S>;
+   using VertexSBarSVBar  = Vertex<typename S::lorentz_conjugate, S, typename V::lorentz_conjugate>;
+   using VertexFBarFVBar  = Vertex<typename F::lorentz_conjugate, F, typename V::lorentz_conjugate>;
+   using VertexFiBarFSBar  = Vertex<typename Fi::lorentz_conjugate, F, typename S::lorentz_conjugate>;
+
+   // masses of external fermions
+   const auto mj = context.mass<Fj>(indices_in);
+   const auto mj2 = mj*mj;
+   const auto mi = context.mass<Fi>(indices_out);
+   const auto mi2 = mi*mi;
+
+   constexpr auto indexBoundsOut = VertexFiBarFSBar::index_bounds;
+   constexpr auto indexBoundsIn = VertexFBarFjS::index_bounds;
+
+   std::valarray<std::complex<double>> res {0.0, 0.0, 0.0, 0.0};
+   // loop over all possible particle "generations" attached to both vertices
+   for (const auto& indexIn: indexBoundsIn) {
+      for (const auto& indexOut: indexBoundsOut) {
+
+         // cycle if generations of external fermions  are different then requested   
+         const auto jFieldIndices = VertexFBarFjS::template fieldIndices<1>(indexIn);
+         const auto iFieldIndices = VertexFiBarFSBar::template fieldIndices<0>(indexOut);
+         if (jFieldIndices != indices_in || iFieldIndices != indices_out)
+            continue;
+
+         // match indices of the fermion field in the loop
+         const auto fermionFieldIndicesIn = VertexFBarFjS::template fieldIndices<0>(indexIn);
+         const auto fermionFieldIndicesOut = VertexFiBarFSBar::template fieldIndices<1>(indexOut);
+         if (fermionFieldIndicesIn != fermionFieldIndicesOut)
+            continue;
+
+         // get SBarSVBar vertex 
+         const auto scalarFieldIndicesIn = VertexFBarFjS::template fieldIndices<2>(indexIn);
+         const auto scalarFieldIndicesOut = VertexFiBarFSBar::template fieldIndices<2>(indexOut);
+         const auto indexSBarSVBar = flexiblesusy::cxx_diagrams::impl::concatenate(
+            flexiblesusy::cxx_diagrams::impl::concatenate(scalarFieldIndicesOut, scalarFieldIndicesIn), 
+            spectator_indices
+         );
+         // not clear what the sign
+         const auto SBarSVBar = -VertexSBarSVBar::evaluate(indexSBarSVBar, context).value();
+         // const auto SBarSVBar = VertexSBarSVBar::evaluate(indexSBarSVBar, context).value(positive momentum index, negative momentum index);
+
+         // get FBarFVBar vertex
+         const auto indexFBarFVBar = flexiblesusy::cxx_diagrams::impl::concatenate(
+            flexiblesusy::cxx_diagrams::impl::concatenate(fermionFieldIndicesOut, fermionFieldIndicesIn),
+            spectator_indices
+         );
+         const auto FBarFVBar = VertexFBarFVBar::evaluate(indexFBarFVBar, context).left();
+
+         const auto mF = context.mass<F>(fermionFieldIndicesIn);
+         const auto mS = context.mass<S>(scalarFieldIndicesOut);
+         const auto x = pow(mF/mS, 2);
+
+
+         const auto FBarFjSBar = VertexFBarFjS::evaluate(indexIn, context);
+         const auto FBarFjSBarL = FBarFjSBar.left();
+         const auto FBarFjSBarR = FBarFjSBar.right();
+
+         const auto FiBarFSBar = VertexFiBarFSBar::evaluate(indexOut, context);
+         const auto FiBarFSL = FiBarFSBar.left();
+         const auto FiBarFSR = FiBarFSBar.right();
+
+         const auto A1L = (FBarFjSBarL*FiBarFSR*((-1 + x)*(18*FBarFVBar*Power(-1 + x,2) + FjBarFjVBar*(-2 + 7*x - 11*Power(x,2))) - 
+       6*(-(FjBarFjVBar*Power(x,3)) + FBarFVBar*(2 - 3*x + Power(x,3)))*Log(x)))/(576.*Power(mS,2)*Power(Pi,2)*Power(-1 + x,4));
+
+       const auto A1R = (FBarFjSBarR*FiBarFSL*((-1 + x)*(18*FBarFVBar*Power(-1 + x,2) + FjBarFjVBar*(-2 + 7*x - 11*Power(x,2))) - 
+       6*(-(FjBarFjVBar*Power(x,3)) + FBarFVBar*(2 - 3*x + Power(x,3)))*Log(x)))/(576.*Power(mS,2)*Power(Pi,2)*Power(-1 + x,4));
+      
+      const auto A2L = -(FBarFjSBarL*FiBarFSL*Sqrt(x)*((-1 + x)*(2*FBarFVBar*(-1 + x) - FjBarFjVBar*(1 + x)) + 2*(FBarFVBar - FBarFVBar*x + FjBarFjVBar*x)*Log(x)))/
+    (32.*mj*mS*Power(Pi,2)*Power(-1 + x,3)) - (FBarFjSBarR*FiBarFSL*
+      ((-1 + x)*(FjBarFjVBar - 5*FjBarFjVBar*x - 2*FjBarFjVBar*Power(x,2) + 3*FBarFVBar*(-1 + Power(x,2))) + 
+        6*x*(FBarFVBar - FBarFVBar*x + FjBarFjVBar*x)*Log(x)))/(192.*Power(mS,2)*Power(Pi,2)*Power(-1 + x,4));
+
+         const auto A2R = 
+         -(FBarFjSBarR*FiBarFSR*Sqrt(x)*((-1 + x)*(2*FBarFVBar*(-1 + x) - FjBarFjVBar*(1 + x)) + 2*(FBarFVBar - FBarFVBar*x + FjBarFjVBar*x)*Log(x)))/
+    (32.*mj*mS*Power(Pi,2)*Power(-1 + x,3)) - (FBarFjSBarL*FiBarFSR*
+      ((-1 + x)*(FjBarFjVBar - 5*FjBarFjVBar*x - 2*FjBarFjVBar*Power(x,2) + 3*FBarFVBar*(-1 + Power(x,2))) + 
+        6*x*(FBarFVBar - FBarFVBar*x + FjBarFjVBar*x)*Log(x)))/(192.*Power(mS,2)*Power(Pi,2)*Power(-1 + x,4));
+
+         res += std::valarray<std::complex<double>> {A1L, A1R, A2L, A2R};
+      }
+   }
+   return res;
+}
 } // anonymous namespace
