--- a/templates/FFMassiveV_form_factors.cpp.in
+++ b/templates/FFMassiveV_form_factors.cpp.in
@@ -173,8 +173,8 @@ std::valarray<std::complex<double>> FFVEmitterFj<Fj, Fi, V, F, S>::value(
       EvaluationContext& context) {
 
    using VertexFjBarFjVBar = Vertex<typename Fj::lorentz_conjugate, Fj, typename V::lorentz_conjugate>;
-   using VertexFbarFjS     = Vertex<typename F::lorentz_conjugate, Fj, S>;
-   using VertexFibarFSbar  = Vertex<typename Fi::lorentz_conjugate, F, typename S::lorentz_conjugate>;
+   using VertexFbarFjS     = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
+   using VertexFibarFSbar  = Vertex<typename Fi::lorentz_conjugate, F, S>;
 
    constexpr auto indexBoundsOut = VertexFibarFSbar::index_bounds;
    constexpr auto indexBoundsIn = VertexFbarFjS::index_bounds;
@@ -256,8 +256,8 @@ std::valarray<std::complex<double>> FFVEmitterFi<Fj, Fi, V, F, S>::value(
       EvaluationContext& context) {
 
    using VertexFiBarFiVBar = Vertex<typename Fi::lorentz_conjugate, Fi, typename V::lorentz_conjugate>;
-   using VertexFBarFjS     = Vertex<typename F::lorentz_conjugate, Fj, S>;
-   using VertexFiBarFSBar  = Vertex<typename Fi::lorentz_conjugate, F, typename S::lorentz_conjugate>;
+   using VertexFBarFjS     = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
+   using VertexFiBarFSBar  = Vertex<typename Fi::lorentz_conjugate, F, S>;
 
    constexpr auto indexBoundsOut = VertexFiBarFSBar::index_bounds;
    constexpr auto indexBoundsIn = VertexFBarFjS::index_bounds;
@@ -336,8 +336,8 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
       EvaluationContext& context) {
 
    using VertexFBarFVBar  = Vertex<typename F::lorentz_conjugate, F, typename V::lorentz_conjugate>;
-   using VertexFBarFjS    = Vertex<typename F::lorentz_conjugate, Fj, S>;
-   using VertexFiBarFSBar = Vertex<typename Fi::lorentz_conjugate, F, typename S::lorentz_conjugate>;
+   using VertexFBarFjS    = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
+   using VertexFiBarFSBar = Vertex<typename Fi::lorentz_conjugate, F, S>;
 
    constexpr auto indexBoundsOut = VertexFiBarFSBar::index_bounds;
    constexpr auto indexBoundsIn = VertexFBarFjS::index_bounds;
@@ -429,8 +429,8 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
    EvaluationContext& context) {
 
    using VertexSBarSVBar  = Vertex<typename S::lorentz_conjugate, S, typename V::lorentz_conjugate>;
-   using VertexFBarFjS    = Vertex<typename F::lorentz_conjugate, Fj, S>;
-   using VertexFiBarFSBar = Vertex<typename Fi::lorentz_conjugate, F, typename S::lorentz_conjugate>;
+   using VertexFBarFjS    = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
+   using VertexFiBarFSBar = Vertex<typename Fi::lorentz_conjugate, F, S>;
 
    auto spectator_indices = default_indices_for_spectator<V>();
 
