--- a/templates/FFV_form_factors.cpp.in
+++ b/templates/FFV_form_factors.cpp.in
@@ -463,6 +463,9 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
          // get SBarSVBar vertex 
          const auto scalarFieldIndicesIn = VertexFBarFjS::template fieldIndices<2>(indexIn);
          const auto scalarFieldIndicesOut = VertexFiBarFSBar::template fieldIndices<2>(indexOut);
+         if (scalarFieldIndicesIn != scalarFieldIndicesOut)
+            continue;
+
          const auto indexSBarSVBar = flexiblesusy::cxx_diagrams::impl::concatenate(
             flexiblesusy::cxx_diagrams::impl::concatenate(scalarFieldIndicesOut, scalarFieldIndicesIn), 
             spectator_indices
@@ -496,18 +499,19 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
 
        const auto A1R = (FBarFjSBarR*FiBarFSL*((-1 + x)*(18*FBarFVBar*Power(-1 + x,2) + FjBarFjVBar*(-2 + 7*x - 11*Power(x,2))) - 
        6*(-(FjBarFjVBar*Power(x,3)) + FBarFVBar*(2 - 3*x + Power(x,3)))*Log(x)))/(576.*Power(mS,2)*Power(Pi,2)*Power(-1 + x,4));
-      
-      const auto A2L = -(FBarFjSBarL*FiBarFSL*Sqrt(x)*((-1 + x)*(2*FBarFVBar*(-1 + x) - FjBarFjVBar*(1 + x)) + 2*(FBarFVBar - FBarFVBar*x + FjBarFjVBar*x)*Log(x)))/
+          
+      const auto A2L = 
+         -(FBarFjSBarL*FiBarFSL*Sqrt(x)*((-1 + x)*(2*FBarFVBar*(-1 + x) - FjBarFjVBar*(1 + x)) + 2*(FBarFVBar - FBarFVBar*x + FjBarFjVBar*x)*Log(x)))/
     (32.*mj*mS*Power(Pi,2)*Power(-1 + x,3)) - (FBarFjSBarR*FiBarFSL*
-      ((-1 + x)*(FjBarFjVBar - 5*FjBarFjVBar*x - 2*FjBarFjVBar*Power(x,2) + 3*FBarFVBar*(-1 + Power(x,2))) + 
+      ((-1 + x)*(FjBarFjVBar - 5*FjBarFjVBar*x - 2*FjBarFjVBar*Power(x,2) + 3*FBarFVBar*(-1 + Power(x,2))) +
         6*x*(FBarFVBar - FBarFVBar*x + FjBarFjVBar*x)*Log(x)))/(192.*Power(mS,2)*Power(Pi,2)*Power(-1 + x,4));
-
-         const auto A2R = 
-         -(FBarFjSBarR*FiBarFSR*Sqrt(x)*((-1 + x)*(2*FBarFVBar*(-1 + x) - FjBarFjVBar*(1 + x)) + 2*(FBarFVBar - FBarFVBar*x + FjBarFjVBar*x)*Log(x)))/
+         
+         const auto A2R =
+            -(FBarFjSBarR*FiBarFSR*Sqrt(x)*((-1 + x)*(2*FBarFVBar*(-1 + x) - FjBarFjVBar*(1 + x)) + 2*(FBarFVBar - FBarFVBar*x + FjBarFjVBar*x)*Log(x)))/
     (32.*mj*mS*Power(Pi,2)*Power(-1 + x,3)) - (FBarFjSBarL*FiBarFSR*
-      ((-1 + x)*(FjBarFjVBar - 5*FjBarFjVBar*x - 2*FjBarFjVBar*Power(x,2) + 3*FBarFVBar*(-1 + Power(x,2))) + 
+      ((-1 + x)*(FjBarFjVBar - 5*FjBarFjVBar*x - 2*FjBarFjVBar*Power(x,2) + 3*FBarFVBar*(-1 + Power(x,2))) +
         6*x*(FBarFVBar - FBarFVBar*x + FjBarFjVBar*x)*Log(x)))/(192.*Power(mS,2)*Power(Pi,2)*Power(-1 + x,4));
-
+            
          res += std::valarray<std::complex<double>> {A1L, A1R, A2L, A2R};
       }
    }
