--- a/templates/FFV_form_factors.cpp.in
+++ b/templates/FFV_form_factors.cpp.in
@@ -63,11 +63,11 @@ static constexpr double oneOver32PiSquared = 1.0/(32.0*Pi*Pi);
  * dipole moment of a one loop diagram with fields given by
  * \a Args.
  */
-template<class FermionIn, class FermionOut, class Spectator, class Emitter, class ExchangeParticle>
-struct EDMVertexCorrectionSF {
+template<class Fj, class Fi, class Spectator, class ExchangeParticle, class Emitter>
+struct FFVEmitterS {
    static std::valarray<std::complex<double>> value(
-         const typename field_indices<FermionIn>::type& indices_in,
-         const typename field_indices<FermionOut>::type& indices_out,
+         const typename field_indices<Fj>::type& indices_in,
+         const typename field_indices<Fi>::type& indices_out,
                        EvaluationContext& context);
 };
 
@@ -87,16 +87,16 @@ struct EDMVertexCorrectionSF {
 * \a Args.
 */
 
-template<class FermionIn, class FermionOut, class Spectator, class Emitter, class ExchangeParticle>
-struct EDMVertexCorrectionFS {
+template<class FermionIn, class Fi, class Spectator, class Emitter, class ExchangeParticle>
+struct FFVEmitterF {
    static std::valarray<std::complex<double>> value(
          const typename field_indices<FermionIn>::type& indices_in,
-         const typename field_indices<FermionOut>::type& indices_out,
+         const typename field_indices<Fi>::type& indices_out,
                        EvaluationContext& context);
 };
 
 template<class Fj, class Fi, class V, class F, class S>
-struct FFVEmitterS {
+struct FFV {
 static std::valarray<std::complex<double>> value(
    const typename field_indices<Fj>::type& indices_in, 
    const typename field_indices<Fi>::type& indices_out, 
@@ -223,79 +223,62 @@ default_indices_for_spectator<VG>( void )
   return {0};
 }
 
-/*
-// emit spectator from the internal scalar line
-template<class FermionIn, class FermionOut, class Spectator, class Emitter, class ExchangeField>
-std::valarray<std::complex<double>> EDMVertexCorrectionSF<
-FermionIn, FermionOut, Spectator, Emitter, ExchangeField
->::value(
-      const typename field_indices<FermionIn>::type& indices_in, 
-      const typename field_indices<FermionOut>::type& indices_out, 
-      EvaluationContext& context)
-{
-   std::valarray<std::complex<double>> res {0.0, 0.0, 0.0, 0.0};
+// emit V from the internal scalar line
+template<class Fj, class Fi, class V, class F, class S>
+std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
+      const typename field_indices<Fj>::type& indices_in, 
+      const typename field_indices<Fi>::type& indices_out, 
+      EvaluationContext& context) {
 
-   using FermionVertexIn = Vertex<
-                         FermionIn,
-                         ExchangeField,
-                         typename Emitter::lorentz_conjugate
-                         >;
-   using FermionVertexOut = Vertex<
-                         typename FermionOut::lorentz_conjugate,
-                         typename ExchangeField::lorentz_conjugate,
-                         Emitter
-                         >;
-   using FermionVertexEmit = Vertex<
-                         typename Spectator::lorentz_conjugate,
-                         Emitter,
-                         typename Emitter::lorentz_conjugate
-                         >;
+   using VertexFBarFjSBar = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
+   using VertexFiBarFS    = Vertex<typename Fi::lorentz_conjugate, F, S>;
+   using VertexSBarSVBar  = Vertex<typename S::lorentz_conjugate, S, typename V::lorentz_conjugate>;
 
-   constexpr auto indexBoundsOut = FermionVertexOut::index_bounds;
-   constexpr auto indexBoundsIn = FermionVertexIn::index_bounds;
+   // masses of external fermions
+   const auto mj = context.mass<Fj>(indices_in);
 
    // loop over all possible particle "generations" attached to both vertices
-   for (const auto& indexIn: indexBoundsIn) {
-      for (const auto& indexOut: indexBoundsOut) {
+   std::valarray<std::complex<double>> res {0.0, 0.0, 0.0, 0.0};
+   for (const auto& indexIn: index_range<VertexFBarFjSBar>()) {
+      for (const auto& indexOut: index_range<VertexFiBarFS>()) {
 
          // cycle if generations of external fermions  are different then requested   
-         const auto edmFieldIndicesIn = FermionVertexIn::template field_indices<0>(indexIn);
-         const auto edmFieldIndicesOut = FermionVertexOut::template field_indices<0>(indexOut);
+         const auto edmFieldIndicesIn = VertexFBarFjSBar::template field_indices<1>(indexIn);
+         const auto edmFieldIndicesOut = VertexFiBarFS::template field_indices<0>(indexOut);
          if (edmFieldIndicesIn != indices_in || edmFieldIndicesOut != indices_out)
             continue;
 
          // match indices of the exchange field
-         const auto exchangeFieldIndicesIn = FermionVertexIn::template field_indices<1>(indexIn);
-         const auto exchangeFieldIndicesOut = FermionVertexOut::template field_indices<1>(indexOut);
+         const auto exchangeFieldIndicesIn = VertexFBarFjSBar::template field_indices<0>(indexIn);
+         const auto exchangeFieldIndicesOut = VertexFiBarFS::template field_indices<1>(indexOut);
          if (exchangeFieldIndicesIn != exchangeFieldIndicesOut)
             continue;
 
 
-         const auto EmitterIndicesIn = FermionVertexIn::template field_indices<2>(indexIn);
-         const auto EmitterIndicesOut = FermionVertexOut::template field_indices<2>(indexOut);
+         const auto EmitterIndicesIn = VertexFBarFjSBar::template field_indices<2>(indexIn);
+         const auto EmitterIndicesOut = VertexFiBarFS::template field_indices<2>(indexOut);
          if (EmitterIndicesIn != EmitterIndicesOut) continue;
 
          // Throw out SM Goldstone, it could crash if SM is used.
-         if ( std::is_same<Emitter, ChargedHiggsMultiplet>::type::value || 
-                 std::is_same<Emitter, typename ChargedHiggsMultiplet::lorentz_conjugate>::type::value )
-         {
-            if ( EmitterIndicesIn[0] == 0 )
-                continue;
-         }
+         // if ( std::is_same<S, ChargedHiggsMultiplet>::type::value || 
+               //   std::is_same<S, typename ChargedHiggsMultiplet::lorentz_conjugate>::type::value )
+         // {
+            // if ( EmitterIndicesIn[0] == 0 )
+               //  continue;
+         // }
 
-         const auto vertexIn = FermionVertexIn::evaluate(indexIn, context);
-         const auto vertexOut = FermionVertexOut::evaluate(indexOut, context);
+         const auto vertexIn = VertexFBarFjSBar::evaluate(indexIn, context);
+         const auto vertexOut = VertexFiBarFS::evaluate(indexOut, context);
 
-         auto spectator_indices = default_indices_for_spectator<Spectator>();
-         const auto indexEmit = flexiblesusy::cxx_diagrams::impl::concatenate( flexiblesusy::cxx_diagrams::impl::concatenate( spectator_indices, EmitterIndicesIn ), EmitterIndicesIn );
-         const auto vertexEmit = FermionVertexEmit::evaluate(indexEmit, context);
+         auto spectator_indices = default_indices_for_spectator<V>();
+         const auto indexEmit = concatenate( EmitterIndicesIn, spectator_indices, EmitterIndicesIn );
+         const auto vertexEmit = VertexSBarSVBar::evaluate(indexEmit, context);
 
-         const auto EmitterMass = context.mass<Emitter>(EmitterIndicesIn);
-         const auto exchangeFieldMass = context.mass<ExchangeField>(exchangeFieldIndicesIn);
+         const auto EmitterMass = context.mass<S>(EmitterIndicesIn);
+         const auto exchangeFieldMass = context.mass<F>(exchangeFieldIndicesIn);
          const auto x = pow(exchangeFieldMass/EmitterMass, 2);
-         const auto leptonMass = context.mass<FermionIn>(edmFieldIndicesIn);
 
-         std::complex<double> EmitterCharge (vertexEmit.value());
+         std::complex<double> EmitterCharge (vertexEmit.value(1,0));
 
          // eq. 15 of hep-ph/9510309
          const std::complex<double> A1L =
@@ -303,18 +286,18 @@ FermionIn, FermionOut, Spectator, Emitter, ExchangeField
          // eq. 16 of hep-ph/9510309
          const std::complex<double> A2L = 
             vertexOut.left() * vertexIn.right() * OneLoopFunctionB(x) 
-            + vertexOut.left()* vertexIn.left() * exchangeFieldMass/leptonMass * OneLoopFunctionC(x);
+            + vertexOut.left()* vertexIn.left() * exchangeFieldMass/mj * OneLoopFunctionC(x);
 
          // eq. 15 & 16 of hep-ph/9510309 after replacement L <-> R
          const std::complex<double> A1R = 
             1./18. * vertexOut.left() * vertexIn.right() * OneLoopFunctionA(x);
          const std::complex<double> A2R = 
             vertexOut.right() * vertexIn.left() * OneLoopFunctionB(x) 
-            + vertexOut.right()* vertexIn.right() * exchangeFieldMass/leptonMass * OneLoopFunctionC(x);
+            + vertexOut.right()* vertexIn.right() * exchangeFieldMass/mj * OneLoopFunctionC(x);
 
          const std::complex<double> massFactor = pow(EmitterMass,-2);
 
-         res += oneOver32PiSquared * EmitterCharge * massFactor 
+         res -= oneOver32PiSquared * EmitterCharge * massFactor 
             * std::valarray<std::complex<double>> {A1L, A1R, A2L, A2R};
       }
    }
@@ -323,75 +306,60 @@ FermionIn, FermionOut, Spectator, Emitter, ExchangeField
 }
 
 // emit spectator from the internal fermion line
-template<class FermionIn, class FermionOut, class Spectator, class Emitter, class ExchangeField>
-std::valarray<std::complex<double>> EDMVertexCorrectionFS<
-FermionIn, FermionOut, Spectator, Emitter, ExchangeField
->::value(const typename field_indices<FermionIn>::type& indices_in, 
-      const typename field_indices<FermionOut>::type& indices_out,
-      EvaluationContext& context)
-{
-   std::valarray<std::complex<double>> res {0.0, 0.0, 0.0, 0.0};
+template<class Fj, class Fi, class V, class F, class S>
+std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
+      const typename field_indices<Fj>::type& indices_in, 
+      const typename field_indices<Fi>::type& indices_out,
+      EvaluationContext& context) {
 
-   using FermionVertexIn = Vertex<
-                         FermionIn,
-                         ExchangeField,
-                         typename Emitter::lorentz_conjugate
-                         >;
-   using FermionVertexOut = Vertex<
-                         typename FermionOut::lorentz_conjugate,
-                         typename ExchangeField::lorentz_conjugate,
-                         Emitter
-                         >;
-   using FermionVertexEmit = Vertex<
-                         typename Spectator::lorentz_conjugate,
-                         Emitter,
-                         typename Emitter::lorentz_conjugate
-                         >;
+   using VertexFBarFjSBar = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
+   using VertexFiBarFS    = Vertex<typename Fi::lorentz_conjugate, F, S>;
+   using VertexFBarFVBar  = Vertex<typename F::lorentz_conjugate, F, typename V::lorentz_conjugate>;
    
-   constexpr auto indexBoundsOut = FermionVertexOut::index_bounds;
-   constexpr auto indexBoundsIn = FermionVertexIn::index_bounds;
+   // masses of external fermions
+   const auto mj = context.mass<Fj>(indices_in);
 
    // loop over all possible particle "generations" attached to both vertices
-   for (const auto& indexIn: indexBoundsIn) {
-      for (const auto& indexOut: indexBoundsOut) {
+   std::valarray<std::complex<double>> res {0.0, 0.0, 0.0, 0.0};
+   for (const auto& indexIn: index_range<VertexFBarFjSBar>()) {
+      for (const auto& indexOut: index_range<VertexFiBarFS>()) {
 
          // cycle if generations of external fermions are different then requested   
-         const auto edmFieldIndicesIn = FermionVertexIn::template field_indices<0>(indexIn);
-         const auto edmFieldIndicesOut = FermionVertexOut::template field_indices<0>(indexOut);
+         const auto edmFieldIndicesIn = VertexFBarFjSBar::template field_indices<1>(indexIn);
+         const auto edmFieldIndicesOut = VertexFiBarFS::template field_indices<0>(indexOut);
          if (edmFieldIndicesIn != indices_in || edmFieldIndicesOut != indices_out)
             continue;
 
          // match indices of the exchange field
-         const auto exchangeFieldIndicesIn = FermionVertexIn::template field_indices<1>(indexIn);
-         const auto exchangeFieldIndicesOut = FermionVertexOut::template field_indices<1>(indexOut);
+         const auto exchangeFieldIndicesIn = VertexFBarFjSBar::template field_indices<2>(indexIn);
+         const auto exchangeFieldIndicesOut = VertexFiBarFS::template field_indices<2>(indexOut);
          if (exchangeFieldIndicesIn != exchangeFieldIndicesOut )
             continue;
 
-         const auto EmitterIndicesIn = FermionVertexIn::template field_indices<2>(indexIn);
-         const auto EmitterIndicesOut = FermionVertexOut::template field_indices<2>(indexOut);
-         if (EmitterIndicesIn != EmitterIndicesOut) continue;
+         const auto EmitterIndicesIn = VertexFBarFjSBar::template field_indices<0>(indexIn);
+         const auto EmitterIndicesOut = VertexFiBarFS::template field_indices<1>(indexOut);
+         if (EmitterIndicesIn != EmitterIndicesOut) 
+            continue;
 
          // Throw out SM Goldstone, it could crash if SM is used.
-         if ( std::is_same<ExchangeField, ChargedHiggsMultiplet>::type::value || 
-                 std::is_same<ExchangeField, typename ChargedHiggsMultiplet::lorentz_conjugate>::type::value )
+         if ( std::is_same<S, ChargedHiggsMultiplet>::type::value || 
+                 std::is_same<S, typename ChargedHiggsMultiplet::lorentz_conjugate>::type::value )
          {
             if ( exchangeFieldIndicesIn[0] == 0 )
                 continue;
          }
 
-         const auto vertexIn = FermionVertexIn::evaluate(indexIn, context);
-         const auto vertexOut = FermionVertexOut::evaluate(indexOut, context);
+         const auto vertexIn = VertexFBarFjSBar::evaluate(indexIn, context);
+         const auto vertexOut = VertexFiBarFS::evaluate(indexOut, context);
          
-         auto spectator_indices = default_indices_for_spectator<Spectator>();
-         const auto indexEmit = flexiblesusy::cxx_diagrams::impl::concatenate( flexiblesusy::cxx_diagrams::impl::concatenate( spectator_indices, EmitterIndicesIn ), EmitterIndicesIn );
-         const auto vertexEmit = FermionVertexEmit::evaluate(indexEmit, context);
+         auto spectator_indices = default_indices_for_spectator<V>();
+         const auto indexEmit = concatenate(EmitterIndicesIn , EmitterIndicesIn, spectator_indices);
+         const auto vertexEmit = VertexFBarFVBar::evaluate(indexEmit, context);
 
-         const auto EmitterMass = context.mass<Emitter>(EmitterIndicesIn);
-         const auto exchangeFieldMass = context.mass<ExchangeField>(exchangeFieldIndicesIn);
+         const auto EmitterMass = context.mass<F>(EmitterIndicesIn);
+         const auto exchangeFieldMass = context.mass<S>(exchangeFieldIndicesIn);
          const auto x = pow(EmitterMass/exchangeFieldMass, 2);
-         const auto leptonMass = context.mass<FermionIn>(edmFieldIndicesIn);
 
-         // Assuming left and right couplings are the same. Doesn't work for the Z boson.
          std::complex<double> EmitterCharge (vertexEmit.left());
 
          // eq. 18 of hep-ph/9510309
@@ -400,14 +368,14 @@ FermionIn, FermionOut, Spectator, Emitter, ExchangeField
          // eq. 19 of hep-ph/9510309
          const std::complex<double> A2L = 
             vertexOut.left() * vertexIn.right() * OneLoopFunctionE(x) 
-            + vertexOut.left()* vertexIn.left() * EmitterMass/leptonMass * OneLoopFunctionF(x);
+            + vertexOut.left()* vertexIn.left() * EmitterMass/mj * OneLoopFunctionF(x);
 
          // eq. 18 & 18 of hep-ph/9510309 after replacement L <-> R
          const std::complex<double> A1R = 
             1./18. * vertexOut.left() * vertexIn.right() * OneLoopFunctionD(x);
          const std::complex<double> A2R = 
             vertexOut.right() * vertexIn.left() * OneLoopFunctionE(x) 
-            + vertexOut.right()* vertexIn.right() * EmitterMass/leptonMass * OneLoopFunctionF(x);
+            + vertexOut.right()* vertexIn.right() * EmitterMass/mj * OneLoopFunctionF(x);
          const std::complex<double> massFactor = pow(exchangeFieldMass,-2);
 
          res -= oneOver32PiSquared * EmitterCharge * massFactor 
@@ -417,10 +385,9 @@ FermionIn, FermionOut, Spectator, Emitter, ExchangeField
 
    return res;
 }
-*/
 
 template<class Fj, class Fi, class V, class F, class S>
-std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
+std::valarray<std::complex<double>> FFV<Fj, Fi, V, F, S>::value(
    const typename field_indices<Fj>::type& indices_in, 
    const typename field_indices<Fi>::type& indices_out, 
    EvaluationContext& context) {
@@ -440,8 +407,6 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
    // masses of external fermions
    const auto mj = context.mass<Fj>(indices_in);
    const auto mj2 = mj*mj;
-   const auto mi = context.mass<Fi>(indices_out);
-   const auto mi2 = mi*mi;
 
    std::valarray<std::complex<double>> res {0.0, 0.0, 0.0, 0.0};
    // loop over all possible particle "generations" attached to both vertices
